lib/coal/parser/treetop_parser.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module C
  include Treetop::Runtime

  def root
    @root ||= :c_file
  end

  include Coal::Nodes

  module CFile0
    def translation_unit
      elements[0]
    end

  end

  module CFile1
  end

  def _nt_c_file
    start_index = index
    if node_cache[:c_file].has_key?(index)
      cached = node_cache[:c_file][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_ws
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      i4, s4 = index, []
      r5 = _nt_translation_unit
      s4 << r5
      if r5
        r7 = _nt_ws
        if r7
          r6 = r7
        else
          r6 = instantiate_node(SyntaxNode,input, index...index)
        end
        s4 << r6
      end
      if s4.last
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        r4.extend(CFile0)
      else
        @index = i4
        r4 = nil
      end
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CFile1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_file][start_index] = r0

    r0
  end

  def _nt_ws
    start_index = index
    if node_cache[:ws].has_key?(index)
      cached = node_cache[:ws][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1 = index
      if has_terminal?('\G[\\s]', true, index)
        r2 = true
        @index += 1
      else
        r2 = nil
      end
      if r2
        r1 = r2
      else
        r3 = _nt_multiline_comment
        if r3
          r1 = r3
        else
          r4 = _nt_single_line_comment
          if r4
            r1 = r4
          else
            @index = i1
            r1 = nil
          end
        end
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:ws][start_index] = r0

    r0
  end

  module SingleLineComment0
  end

  module SingleLineComment1
  end

  def _nt_single_line_comment
    start_index = index
    if node_cache[:single_line_comment].has_key?(index)
      cached = node_cache[:single_line_comment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('//', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('//')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        i4 = index
        if has_terminal?("\n", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("\n")
          r5 = nil
        end
        if r5
          r4 = nil
        else
          @index = i4
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s3 << r4
        if r4
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(SingleLineComment0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      if s2.empty?
        @index = i2
        r2 = nil
      else
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(SingleLineComment1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:single_line_comment][start_index] = r0

    r0
  end

  module MultilineComment0
  end

  module MultilineComment1
  end

  def _nt_multiline_comment
    start_index = index
    if node_cache[:multiline_comment].has_key?(index)
      cached = node_cache[:multiline_comment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('/*', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('/*')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        i4 = index
        if has_terminal?('*/', false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure('*/')
          r5 = nil
        end
        if r5
          r4 = nil
        else
          @index = i4
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s3 << r4
        if r4
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(MultilineComment0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        if has_terminal?('*/', false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure('*/')
          r7 = nil
        end
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(MultilineComment1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:multiline_comment][start_index] = r0

    r0
  end

  module Identifier0
  end

  def _nt_identifier
    start_index = index
    if node_cache[:identifier].has_key?(index)
      cached = node_cache[:identifier][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('\G[a-zA-Z_]', true, index)
      r1 = true
      @index += 1
    else
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        if has_terminal?('\G[\\w]', true, index)
          r3 = true
          @index += 1
        else
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(Identifier,input, i0...index, s0)
      r0.extend(Identifier0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:identifier][start_index] = r0

    r0
  end

  def _nt_constant
    start_index = index
    if node_cache[:constant].has_key?(index)
      cached = node_cache[:constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_floating_constant
    if r1
      r0 = r1
    else
      r2 = _nt_integer_constant
      if r2
        r0 = r2
      else
        r3 = _nt_enumeration_constant
        if r3
          r0 = r3
        else
          r4 = _nt_character_constant
          if r4
            r0 = r4
          else
            @index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:constant][start_index] = r0

    r0
  end

  module IntegerConstant0
    def decimal_constant
      elements[0]
    end

  end

  module IntegerConstant1
    def hexadecimal_constant
      elements[0]
    end

  end

  module IntegerConstant2
    def octal_constant
      elements[0]
    end

  end

  def _nt_integer_constant
    start_index = index
    if node_cache[:integer_constant].has_key?(index)
      cached = node_cache[:integer_constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_decimal_constant
    s1 << r2
    if r2
      r4 = _nt_integer_suffix
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(IntegerConstant,input, i1...index, s1)
      r1.extend(IntegerConstant0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5, s5 = index, []
      r6 = _nt_hexadecimal_constant
      s5 << r6
      if r6
        r8 = _nt_integer_suffix
        if r8
          r7 = r8
        else
          r7 = instantiate_node(SyntaxNode,input, index...index)
        end
        s5 << r7
      end
      if s5.last
        r5 = instantiate_node(IntegerConstant,input, i5...index, s5)
        r5.extend(IntegerConstant1)
      else
        @index = i5
        r5 = nil
      end
      if r5
        r0 = r5
      else
        i9, s9 = index, []
        r10 = _nt_octal_constant
        s9 << r10
        if r10
          r12 = _nt_integer_suffix
          if r12
            r11 = r12
          else
            r11 = instantiate_node(SyntaxNode,input, index...index)
          end
          s9 << r11
        end
        if s9.last
          r9 = instantiate_node(IntegerConstant,input, i9...index, s9)
          r9.extend(IntegerConstant2)
        else
          @index = i9
          r9 = nil
        end
        if r9
          r0 = r9
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:integer_constant][start_index] = r0

    r0
  end

  module DecimalConstant0
  end

  def _nt_decimal_constant
    start_index = index
    if node_cache[:decimal_constant].has_key?(index)
      cached = node_cache[:decimal_constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('\G[1-9]', true, index)
      r1 = true
      @index += 1
    else
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        if has_terminal?('\G[\\d]', true, index)
          r3 = true
          @index += 1
        else
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(DecimalConstant,input, i0...index, s0)
      r0.extend(DecimalConstant0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:decimal_constant][start_index] = r0

    r0
  end

  module OctalConstant0
  end

  def _nt_octal_constant
    start_index = index
    if node_cache[:octal_constant].has_key?(index)
      cached = node_cache[:octal_constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('0', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('0')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        if has_terminal?('\G[0-7]', true, index)
          r3 = true
          @index += 1
        else
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(OctalConstant,input, i0...index, s0)
      r0.extend(OctalConstant0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:octal_constant][start_index] = r0

    r0
  end

  module HexadecimalConstant0
  end

  def _nt_hexadecimal_constant
    start_index = index
    if node_cache[:hexadecimal_constant].has_key?(index)
      cached = node_cache[:hexadecimal_constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('0', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('0')
      r1 = nil
    end
    s0 << r1
    if r1
      if has_terminal?('\G[xX]', true, index)
        r2 = true
        @index += 1
      else
        r2 = nil
      end
      s0 << r2
      if r2
        s3, i3 = [], index
        loop do
          if has_terminal?('\G[\\da-fA-F]', true, index)
            r4 = true
            @index += 1
          else
            r4 = nil
          end
          if r4
            s3 << r4
          else
            break
          end
        end
        if s3.empty?
          @index = i3
          r3 = nil
        else
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        end
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(HexadecimalConstant,input, i0...index, s0)
      r0.extend(HexadecimalConstant0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:hexadecimal_constant][start_index] = r0

    r0
  end

  module IntegerSuffix0
  end

  module IntegerSuffix1
  end

  def _nt_integer_suffix
    start_index = index
    if node_cache[:integer_suffix].has_key?(index)
      cached = node_cache[:integer_suffix][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?('\G[uU]', true, index)
      r2 = true
      @index += 1
    else
      r2 = nil
    end
    s1 << r2
    if r2
      if has_terminal?('\G[lL]', true, index)
        r4 = true
        @index += 1
      else
        r4 = nil
      end
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
      if r3
        if has_terminal?('\G[lL]', true, index)
          r6 = true
          @index += 1
        else
          r6 = nil
        end
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s1 << r5
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(IntegerSuffix0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i7, s7 = index, []
      if has_terminal?('\G[lL]', true, index)
        r8 = true
        @index += 1
      else
        r8 = nil
      end
      s7 << r8
      if r8
        if has_terminal?('\G[lL]', true, index)
          r10 = true
          @index += 1
        else
          r10 = nil
        end
        if r10
          r9 = r10
        else
          r9 = instantiate_node(SyntaxNode,input, index...index)
        end
        s7 << r9
        if r9
          if has_terminal?('\G[uU]', true, index)
            r12 = true
            @index += 1
          else
            r12 = nil
          end
          if r12
            r11 = r12
          else
            r11 = instantiate_node(SyntaxNode,input, index...index)
          end
          s7 << r11
        end
      end
      if s7.last
        r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
        r7.extend(IntegerSuffix1)
      else
        @index = i7
        r7 = nil
      end
      if r7
        r0 = r7
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:integer_suffix][start_index] = r0

    r0
  end

  def _nt_floating_constant
    start_index = index
    if node_cache[:floating_constant].has_key?(index)
      cached = node_cache[:floating_constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_hexadecimal_floating_constant
    if r1
      r0 = r1
    else
      r2 = _nt_decimal_floating_constant
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:floating_constant][start_index] = r0

    r0
  end

  module DecimalFloatingConstant0
    def fractional_constant
      elements[0]
    end

  end

  module DecimalFloatingConstant1
    def exponent_part
      elements[1]
    end

  end

  def _nt_decimal_floating_constant
    start_index = index
    if node_cache[:decimal_floating_constant].has_key?(index)
      cached = node_cache[:decimal_floating_constant][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_fractional_constant
    s1 << r2
    if r2
      r4 = _nt_exponent_part
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
      if r3
        if has_terminal?('\G[fFlL]', true, index)
          r6 = true
          @index += 1
        else
          r6 = nil
        end
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s1 << r5
      end
    end
    if s1.last
      r1 = instantiate_node(DecimalFloatingConstant,input, i1...index, s1)
      r1.extend(DecimalFloatingConstant0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i7, s7 = index, []
      s8, i8 = [], index
      loop do
        if has_terminal?('\G[\\d]', true, index)
          r9 = true
          @index += 1
        else
          r9 = nil
        end
        if r9
          s8 << r9
        else
          break
        end
      end
      if s8.empty?
        @index = i8
        r8 = nil
      else
        r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
      end
      s7 << r8
      if r8
        r10 = _nt_exponent_part
        s7 << r10
        if r10
          if has_terminal?('\G[fFlL]', true, index)
            r12 = true
            @index += 1
          else
            r12 = nil
          end
          if r12
            r11 = r12
          else
            r11 = instantiate_node(SyntaxNode,input, index...index)
          end
          s7 << r11
        end
      end
      if s7.last
        r7 = instantiate_node(DecimalFloatingConstant,input, i7...index, s7)
        r7.extend(DecimalFloatingConstant1)
      else
        @index = i7
        r7 = nil
      end
      if r7
        r0 = r7
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:decimal_floating_constant][start_index] = r0

    r0
  end

  module FractionalConstant0
  end

  module FractionalConstant1
  end
